--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+@ -1,139 +1,30 @@
 # Logs
 logs
 *.log
@@ -38,6 +39,7 @@ bower_components
 build/Release
 
 # Dependency directories
+# Dependencies
 node_modules/
 jspm_packages/
 
@@ -58,17 +60,29 @@ web_modules/
 
 # Optional REPL history
 .node_repl_history
+/.pnp
+.pnp.js
 
 # Output of 'npm pack'
 *.tgz
+# Testing
+/coverage
 
 # Yarn Integrity file
 .yarn-integrity
+# Production
+/build
 
 # dotenv environment variable files
 .env
 .env.*
 !.env.example
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -124,6 +138,9 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # yarn v3
 .pnp.*
@@ -133,7 +150,14 @@ dist
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+.env
