--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Poker home game management platform for organizing and managing poker games",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "client": "react-scripts start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "npm run build"
   },
   "proxy": "http://localhost:3001",
   "keywords": [
