--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,5 @@ yarn-error.log*
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-# Local data storage
-gameConfigurations.json
+# Local data storage (deprecated - now using database)
+# gameConfigurations.json
